// This file was generated by a tool; you should avoid making direct changes.
syntax = "proto3";
package xpTURN.MegaData;

message AliasData
{
    sfixed32 Id = 1;
    int32 TableId = 2;
}

message Header
{
    string Space = 1;
    string Name = 2;
    string Subset = 3;
    bytes MetaHash = 4;
    bytes DataHash = 5;
}

message MetaData
{
    string Name = 1;
    int64 Offset = 2;
}

message MetaDataTable
{
    map<string, AliasData> MapAliasData = 1;
    map<string, MetaData> MapMetaData = 11;
}

message MetaNestedData
{
    map<int32, int64> MapIdOffset = 1;
    map<string, int64> MapAliasOffset = 2;
}

message SubsetData
{
    repeated string Tables = 1;
}

message SubsetDataTable
{
    map<string, SubsetData> Map = 1;
}
