// This file was generated by a tool; you should avoid making direct changes.
syntax = "proto3";
package Tests.Locale.Type1;

message LocaleData
{
    int32 Id = 1;
    map<sfixed32, TextData> Map = 2;
}

message LocaleDataTable
{
    map<int32, LocaleData> Map = 1;
}

message TextData
{
    int32 Id = 1;
    string Text = 2;
}

message TranslatedData
{
    sfixed32 Id = 1;
    string IdAlias = 2;
    map<string, string> Map = 3;
}

message TranslatedDataTable
{
    map<sfixed32, TranslatedData> Map = 1;
}
